fix bug with z-indexes

--- a/src/typography.scss
+++ b/src/typography.scss
@@ -69,5 +69,5 @@
 	position: sticky;
 	top: 0;
 	float: right;
-	z-index: 100000;
+	z-index: 1;
 }
